reverted back to java 8, last version supported by RPi 0